@@ -1,5 +1,9 @@
 ChangeLog for the Astro project.
 
+20201226:
+	* make repo directory installation configurable so that we don't 
+	  have to turn of autofs during installation on production raspis
+
 20201201:
 	* complete the Qhy2 driver
 
